; ModuleID = '/home/carl/AnghaBench/borg/src/borg/algorithms/lz4/lib/extr_lz4.c_LZ4_putPositionOnHash.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/algorithms/lz4/lib/extr_lz4.c_LZ4_putPositionOnHash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i8*, i32, i32*)* @LZ4_putPositionOnHash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LZ4_putPositionOnHash(i32* %0, i64 %1, i8* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i64*, align 8
  %13 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %14 = load i32, i32* %9, align 4
  switch i32 %14, label %49 [
    i32 128, label %15
    i32 131, label %17
    i32 129, label %24
    i32 130, label %36
  ]

15:                                               ; preds = %5
  %16 = call i32 @assert(i32 0)
  br label %49

17:                                               ; preds = %5
  %18 = load i8*, i8** %8, align 8
  %19 = bitcast i8* %18 to i32**
  store i32** %19, i32*** %11, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load i32**, i32*** %11, align 8
  %22 = load i64, i64* %7, align 8
  %23 = getelementptr inbounds i32*, i32** %21, i64 %22
  store i32* %20, i32** %23, align 8
  br label %49

24:                                               ; preds = %5
  %25 = load i8*, i8** %8, align 8
  %26 = bitcast i8* %25 to i64*
  store i64* %26, i64** %12, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i32*, i32** %10, align 8
  %29 = ptrtoint i32* %27 to i64
  %30 = ptrtoint i32* %28 to i64
  %31 = sub i64 %29, %30
  %32 = sdiv exact i64 %31, 4
  %33 = load i64*, i64** %12, align 8
  %34 = load i64, i64* %7, align 8
  %35 = getelementptr inbounds i64, i64* %33, i64 %34
  store i64 %32, i64* %35, align 8
  br label %49

36:                                               ; preds = %5
  %37 = load i8*, i8** %8, align 8
  %38 = bitcast i8* %37 to i32*
  store i32* %38, i32** %13, align 8
  %39 = load i32*, i32** %6, align 8
  %40 = load i32*, i32** %10, align 8
  %41 = ptrtoint i32* %39 to i64
  %42 = ptrtoint i32* %40 to i64
  %43 = sub i64 %41, %42
  %44 = sdiv exact i64 %43, 4
  %45 = trunc i64 %44 to i32
  %46 = load i32*, i32** %13, align 8
  %47 = load i64, i64* %7, align 8
  %48 = getelementptr inbounds i32, i32* %46, i64 %47
  store i32 %45, i32* %48, align 4
  br label %49

49:                                               ; preds = %15, %17, %24, %36, %5
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
